# ray-tracer

./: .gitignore  Cargo.toml  README.md  image.ppm
benches/: bench.rs
examples/: 3spheres.rs  basic_plane.rs  random_spheres.rs  shapes.rs  sphere.rs  sphere_plane.rs  test.rs
scenes/: 3spheres.yaml  bench.yaml  bench_spheres.yaml  bench_spheres2.yaml  box.yaml  cylinder.yaml  sphere.yaml  sphere_plane.yaml  test_input.yaml  test_scene.yaml
scenes/examples/: 3spheres.yaml  shapes.yaml
scenes/tests/: bench.yaml  test_input.yaml
src/: camera.rs  colour.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  matrix.rs  object.rs  output.rs  pattern.rs  point3.rs  ray.rs  render.rs  scene.rs  sphere.rs  transform.rs  vec3.rs
src/io/: input.rs  mod.rs  output.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/object/: bbox.rs  cone.rs  cuboid.rs  cylinder.rs  mod.rs  object.rs  plane.rs  scene.rs  sphere.rs
