[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra = "0.32.1"
rayon = "1.6.1"
indicatif = "0.17.3"
image = "0.24.5"
anyhow = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1.2", features = ["derive"] }

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false